{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 92,
  "lineage": "f0ae5b9f-fd00-96e7-02f9-04d810a2166d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "nlb_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:network-interface/eni-00239dc7c01241e48",
            "association": [
              {
                "ip_owner_id": "562662225709",
                "public_dns_name": "ec2-35-74-136-129.ap-northeast-1.compute.amazonaws.com",
                "public_ip": "35.74.136.129"
              }
            ],
            "attachment": [
              {
                "attachment_id": "ela-attach-06f61697688af0e37",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "ap-northeast-1a",
            "description": "ELB net/nlb-snat-test-nlb/c01cdfb70113a490",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB net/nlb-snat-test-nlb/*"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-006e1de350271121f"
                ]
              }
            ],
            "id": "eni-00239dc7c01241e48",
            "interface_type": "network_load_balancer",
            "mac_address": "06:32:15:e6:e6:9f",
            "owner_id": "556712930698",
            "private_dns_name": "ip-10-0-1-45.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.45",
            "private_ips": [
              "10.0.1.45"
            ],
            "requester_id": "562662225709",
            "subnet_id": "subnet-006e1de350271121f",
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:network-interface/eni-01a0c8dd5ea895e56",
            "association": [
              {
                "ip_owner_id": "720472936100",
                "public_dns_name": "ec2-52-68-187-115.ap-northeast-1.compute.amazonaws.com",
                "public_ip": "52.68.187.115"
              }
            ],
            "attachment": [
              {
                "attachment_id": "ela-attach-0420581747ae6f879",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "ap-northeast-1c",
            "description": "ELB net/nlb-snat-test-nlb/c01cdfb70113a490",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB net/nlb-snat-test-nlb/*"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-06d80e0984964401b"
                ]
              }
            ],
            "id": "eni-01a0c8dd5ea895e56",
            "interface_type": "network_load_balancer",
            "mac_address": "0a:f3:6a:ed:52:4b",
            "owner_id": "556712930698",
            "private_dns_name": "ip-10-0-2-174.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.174",
            "private_ips": [
              "10.0.2.174"
            ],
            "requester_id": "720472936100",
            "subnet_id": "subnet-06d80e0984964401b",
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095af7cb7ddb447ef",
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:instance/i-0d867e4c964b00885",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d867e4c964b00885",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cc7b8ddb0de5823",
            "private_dns": "ip-10-0-1-18.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-54-249-81-14.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.249.81.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-094a17bad38b42141",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006e1de350271121f",
            "tags": {
              "Name": "nlb-snat-test-bastion"
            },
            "tags_all": {
              "Name": "nlb-snat-test-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e40d4ef21592161"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095af7cb7ddb447ef",
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:instance/i-029a04ec9c017eb21",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029a04ec9c017eb21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088a866a6ae38f6bc",
            "private_dns": "ip-10-0-3-71.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0937427d66609d5ae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039a4a071a4653431",
            "tags": {
              "Name": "nlb-snat-test-private-server-1"
            },
            "tags_all": {
              "Name": "nlb-snat-test-private-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08fb11a0c05c8df3e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.private_instances",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095af7cb7ddb447ef",
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:instance/i-01895297fc631e49a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01895297fc631e49a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071a530f46c1b4b55",
            "private_dns": "ip-10-0-4-99.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09ed7c3589a54f615",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b68f3f03e3d96972",
            "tags": {
              "Name": "nlb-snat-test-private-server-2"
            },
            "tags_all": {
              "Name": "nlb-snat-test-private-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08fb11a0c05c8df3e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.private_instances",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_snat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095af7cb7ddb447ef",
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:instance/i-0d974d97498eeffab",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d974d97498eeffab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c27e8c927d36c997",
            "private_dns": "ip-10-0-1-80.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.80",
            "public_dns": "ec2-13-231-162-190.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.162.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00bace5a8497ed017",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-006e1de350271121f",
            "tags": {
              "Name": "nlb-snat-test-public-snat-server-1"
            },
            "tags_all": {
              "Name": "nlb-snat-test-public-snat-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e40d4ef21592161",
              "sg-0cf171ea0b89b3a1d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.public_snat_instances",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.template_file.snat_user_data"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095af7cb7ddb447ef",
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:instance/i-07cd8acfde75345d7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cd8acfde75345d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0835d1910d320d621",
            "private_dns": "ip-10-0-2-18.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.18",
            "public_dns": "ec2-43-207-187-24.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "43.207.187.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-037215c1238b60e29",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06d80e0984964401b",
            "tags": {
              "Name": "nlb-snat-test-public-snat-server-2"
            },
            "tags_all": {
              "Name": "nlb-snat-test-public-snat-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e40d4ef21592161",
              "sg-0cf171ea0b89b3a1d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.public_snat_instances",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.template_file.snat_user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:internet-gateway/igw-07507ab2332fdd3ef",
            "id": "igw-07507ab2332fdd3ef",
            "owner_id": "556712930698",
            "tags": {
              "Name": "nlb-snat-test-igw"
            },
            "tags_all": {
              "Name": "nlb-snat-test-igw"
            },
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:loadbalancer/net/nlb-snat-test-nlb/c01cdfb70113a490",
            "arn_suffix": "net/nlb-snat-test-nlb/c01cdfb70113a490",
            "dns_name": "nlb-snat-test-nlb-c01cdfb70113a490.elb.ap-northeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:loadbalancer/net/nlb-snat-test-nlb/c01cdfb70113a490",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb-snat-test-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006e1de350271121f"
              },
              {
                "subnet_id": "subnet-06d80e0984964401b"
              }
            ],
            "subnets": [
              "subnet-006e1de350271121f",
              "subnet-06d80e0984964401b"
            ],
            "vpc_id": "vpc-0968e0e14c19727eb",
            "zone_id": "Z31USIVHYNEOWT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:listener/net/nlb-snat-test-nlb/c01cdfb70113a490/6f5366b233ebfff8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:targetgroup/nlb-snat-test-tg/3f2d3507a02054d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:listener/net/nlb-snat-test-nlb/c01cdfb70113a490/6f5366b233ebfff8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:loadbalancer/net/nlb-snat-test-nlb/c01cdfb70113a490",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:targetgroup/nlb-snat-test-tg/3f2d3507a02054d5",
            "arn_suffix": "targetgroup/nlb-snat-test-tg/3f2d3507a02054d5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:targetgroup/nlb-snat-test-tg/3f2d3507a02054d5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nlb-snat-test-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": true,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "snat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:targetgroup/nlb-snat-test-tg/3f2d3507a02054d5-20250804104908884700000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:targetgroup/nlb-snat-test-tg/3f2d3507a02054d5",
            "target_id": "i-0d974d97498eeffab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.public_snat",
            "aws_lb_target_group.main",
            "aws_security_group.bastion",
            "aws_security_group.public_snat_instances",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.template_file.snat_user_data"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:targetgroup/nlb-snat-test-tg/3f2d3507a02054d5-20250804104908827900000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:556712930698:targetgroup/nlb-snat-test-tg/3f2d3507a02054d5",
            "target_id": "i-07cd8acfde75345d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.public_snat",
            "aws_lb_target_group.main",
            "aws_security_group.bastion",
            "aws_security_group.public_snat_instances",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.template_file.snat_user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:route-table/rtb-01e6b6873ed2b9c1c",
            "id": "rtb-01e6b6873ed2b9c1c",
            "owner_id": "556712930698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-00239dc7c01241e48",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nlb-snat-test-private-rt-1"
            },
            "tags_all": {
              "Name": "nlb-snat-test-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_network_interface.nlb_eni"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:route-table/rtb-04eb86b3a3e7659ee",
            "id": "rtb-04eb86b3a3e7659ee",
            "owner_id": "556712930698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-01a0c8dd5ea895e56",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nlb-snat-test-private-rt-2"
            },
            "tags_all": {
              "Name": "nlb-snat-test-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_network_interface.nlb_eni"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:route-table/rtb-0d27fbd56dab22702",
            "id": "rtb-0d27fbd56dab22702",
            "owner_id": "556712930698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07507ab2332fdd3ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nlb-snat-test-public-rt"
            },
            "tags_all": {
              "Name": "nlb-snat-test-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0905ed869410a3e32",
            "route_table_id": "rtb-01e6b6873ed2b9c1c",
            "subnet_id": "subnet-039a4a071a4653431"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_network_interface.nlb_eni"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e69fb7584f932039",
            "route_table_id": "rtb-04eb86b3a3e7659ee",
            "subnet_id": "subnet-0b68f3f03e3d96972"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_network_interface.nlb_eni"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0037dfe593bc1ab05",
            "route_table_id": "rtb-0d27fbd56dab22702",
            "subnet_id": "subnet-006e1de350271121f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c5d7d0858dcad60",
            "route_table_id": "rtb-0d27fbd56dab22702",
            "subnet_id": "subnet-06d80e0984964401b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:security-group/sg-02e40d4ef21592161",
            "description": "Allow SSH from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e40d4ef21592161",
            "ingress": [
              {
                "cidr_blocks": [
                  "1.21.51.15/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nlb-snat-test-bastion-sg",
            "name_prefix": "",
            "owner_id": "556712930698",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:security-group/sg-08fb11a0c05c8df3e",
            "description": "Allow SSH from bastion and all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fb11a0c05c8df3e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e40d4ef21592161"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nlb-snat-test-private-sg",
            "name_prefix": "",
            "owner_id": "556712930698",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_snat_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:security-group/sg-0cf171ea0b89b3a1d",
            "description": "Allow all traffic from private subnets and all egress to internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf171ea0b89b3a1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nlb-snat-test-public-snat-sg",
            "name_prefix": "",
            "owner_id": "556712930698",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:subnet/subnet-039a4a071a4653431",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039a4a071a4653431",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556712930698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nlb-snat-test-private-subnet-1"
            },
            "tags_all": {
              "Name": "nlb-snat-test-private-subnet-1"
            },
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:subnet/subnet-0b68f3f03e3d96972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b68f3f03e3d96972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556712930698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nlb-snat-test-private-subnet-2"
            },
            "tags_all": {
              "Name": "nlb-snat-test-private-subnet-2"
            },
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:subnet/subnet-006e1de350271121f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006e1de350271121f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556712930698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nlb-snat-test-public-subnet-1"
            },
            "tags_all": {
              "Name": "nlb-snat-test-public-subnet-1"
            },
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:subnet/subnet-06d80e0984964401b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d80e0984964401b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556712930698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nlb-snat-test-public-subnet-2"
            },
            "tags_all": {
              "Name": "nlb-snat-test-public-subnet-2"
            },
            "vpc_id": "vpc-0968e0e14c19727eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:556712930698:vpc/vpc-0968e0e14c19727eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb5a6addabc5cb24",
            "default_route_table_id": "rtb-0e1c0d6de97d247e8",
            "default_security_group_id": "sg-05a01e6312467b55c",
            "dhcp_options_id": "dopt-0ebac17d2883f1f8c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0968e0e14c19727eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1c0d6de97d247e8",
            "owner_id": "556712930698",
            "tags": {
              "Name": "nlb-snat-test-vpc"
            },
            "tags_all": {
              "Name": "nlb-snat-test-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}